# cmake-googletest-pybind11-example

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  compile.sh  reinstall_googletest.sh  reinstall_pybind11..sh
src/include/: FactorialLib.h
src/main/: CMakeLists.txt  Factorial.cpp  Factorial.h  PyModule.cpp
src/main/lib/pybind11/: Makefile_bak  pybind11.cbp
src/main/lib/pybind11/git_bak/: config  index  packed-refs
src/main/lib/pybind11/git_bak/logs/refs/remotes/origin/: HEAD
src/main/lib/pybind11/git_bak/objects/pack/: pack-24d2655dc5b33d8d038a534cc67f24815486936c.idx  pack-24d2655dc5b33d8d038a534cc67f24815486936c.pack
src/main/lib/pybind11/git_bak/refs/heads/: master
src/main/numeric/: CMakeLists.txt  Factorial.cpp  Factorial_p.h
src/test/: CMakeLists.txt  FactorialTest.cpp
src/test/lib/googletest/git_bak/: config  index  packed-refs
src/test/lib/googletest/git_bak/logs/refs/remotes/origin/: HEAD
src/test/lib/googletest/git_bak/objects/pack/: pack-6c91559019201c2aad5e0a9afd57581c045fd113.idx  pack-6c91559019201c2aad5e0a9afd57581c045fd113.pack
src/test/lib/googletest/git_bak/refs/heads/: master
